--------------------------------------------
- Switched to use wxXmlSerializer 1.2.1:
  - Added function xsSerializable::RemoveProperty(xsProperty *property).
  - Functions wxXmlSerializer::SerializeToXML() and wxXmlSerializer::DeserializeFromXml() now returns bool value informing about the
    operation success/fail.
  
- Significantly improved compatibility with wxMAC.
- Updated premake build files to work properly also on Mac OS.
- The thumbnail control (wxSFThumbnail) is refreshed when NULL shape canvas is set.
- More accurate size change of text shapes.
- Fixed possible crash after Cut/Undo/Redo/Delete operations.
- Fixed displaying of bitmap shapes in the canvas thumbnail.
- Functions wxSFDiagramManager::SerializeToXML() and wxSFDiagramManager::DeserializeFromXml() now returns bool value informing about the
  operation success/fail.

Changes in version 1.8.0 beta (2009-06-10):
--------------------------------------------
- Switched to use wxXmlSerializer 1.2.0:
  - Added functions void xsProperty::ToString() which returns textual representation of current property value and
    xsProperty::FromString(const wxString& val) which sets the property value from its textual representation. The functions
    can be used for indirect manipulating with serialized data members encapsulated by properties (see xsSerializable::GetProperty()).
  - Added set of type cast functions with data type assertion for indirect manipulation with serialized data members encapsulated
    by properties. See functions xsProperty::AsInt(), xsProperty::AsDouble(), etc.
  - Function xsSerializable::AddChild(xsSerializable* child) correctly initializes all children recursively.
  - Function wxXmlSerializer::SetRootItem(xsSerializable* root) correctly initializes all root's children recursively.
  - Renamed function xsSerializable::IsCloned() to xsSerializable::IsCloningEnabled().